--- a/.github/workflows/build-crDroid-kernel-nabu.yml
+++ b/.github/workflows/build-crDroid-kernel-nabu.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   REPO_URL: https://github.com/LeeHe-gif/android_kernel_xiaomi_nabu.git
-  REPO_BRANCH: 16.0
+  REPO_BRANCH: "16.0"
   TZ: Asia/Shanghai
 
 jobs:
