--- a/.github/workflows/build-crDroid-kernel-nabu.yml
+++ b/.github/workflows/build-crDroid-kernel-nabu.yml
@@ -30,7 +30,17 @@ jobs:
           tool-cache: true
           android: true
           dotnet: true
-    
+  
+      - name: Setup massive swap
+        run: |
+          free -h
+          sudo fallocate -l 32G /swapfile
+          sudo chmod 600 /swapfile
+          sudo mkswap /swapfile
+          sudo swapon /swapfile
+          free -h
+          echo "Swap setup completed"
+          
       - name: Show hardware info
         run: |
           chmod 755 ./scripts/show_hardware_info.sh
