--- a/.github/workflows/build-crDroid-kernel-nabu.yml
+++ b/.github/workflows/build-crDroid-kernel-nabu.yml
@@ -72,14 +72,71 @@ jobs:
           ./build8.sh
           cp out/.config config
 
-      - name: Create out directory archive
-        run: |
-          cd kernel_source
-          zip -r kernel_boot_directory.zip out/arch/arm64/boot
-
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: nabu-crDroid-kernel-build-artifacts
           path: |
-            kernel_source/kernel_boot_directory.zip
+            kernel_source/out/arch/arm64/boot/Image
+            kernel_source/out/arch/arm64/boot/Image.gz
+            kernel_source/out/arch/arm64/boot/Image.gz-dtb
+            kernel_source/out/arch/arm64/boot/dtbo.img
+            kernel_source/config
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    if: success()
+
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: nabu-crDroid-kernel-build-artifacts
+          path: ./artifacts
+
+      - name: List downloaded artifacts
+        run: |
+          echo "当前目录结构:"
+          pwd
+          ls -la
+          echo "Artifacts 目录结构:"
+          ls -la ./artifacts/
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: "nabu-crDroid-kernel-build"
+          name: "nabu crDroid 12.5 Kernel Build"
+          body: |
+            # nabu crDroid 12.5 Kernel Build
+          
+            小米平板5 (nabu) crDoird 12.5 版本内核
+            分支：16.0
+            特性：开启内核docker支持
+          
+            ## 特性：
+            - ✅ 完整 Docker 容器支持
+            - ✅ 基于 [crDroid 12.5](https://github.com/LeeHe-gif/android_kernel_xiaomi_nabu) 内核源码
+            ` ✅ ksu-next支持
+            
+            ## 刷机说明
+            1. 下载 `Image`
+            2. git [AIK](https://github.com/Shubhamvis98/AIK) 项目
+            3. 先解包crDroid 12.5的boot，再去AIK/split/里把kernel删掉，把我们的Image改名为kernel，把改名后的东西复制到AIK/split/，然后再重新打包boot，刷入即可。
+            ```Bash
+            #解包命令
+            ./unpackimg boot.img
+            ```
+            ```Bash
+            #打包命令
+            ./repackimg 
+            ```
+            **注意：** 刷机前请备份重要数据。
+            
+          draft: false
+          prerelease: false
+          files: |
+            ./artifacts/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
