--- a/.github/workflows/build-803SH-kernel.yml
+++ b/.github/workflows/build-803SH-kernel.yml
@@ -16,17 +16,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      #- name: Cache clang toolchain
-      # uses: actions/cache@v3
-      #  with:
-      #   path: clang-r383902
-      #   key: clang-r383902
-      #  restore-keys: |
-      #    clang-r383902
+      - name: Cache clang toolchain
+        uses: actions/cache@v3
+        with:
+         path: clang-r353983c
+         key: clang-r353983c
+         restore-keys: clang-r353983c
       
       - name: git GCC
         run : |
-          git clone https://github.com/KudProject/aarch64-linux-android-4.9.git --depth 1
+          git clone https://github.com/Zenfone2-Dev/x86_64-linux-android-4.9.git --depth 1
       
       - name: Install basic dependencies
         run: |
@@ -57,7 +56,8 @@ jobs:
 
       - name: Build kernel
         run: |
-          mv aarch64-linux-android-4.9 ~/aarch64-linux-android-4.9
+          mv clang-r353983c ~/clang-r353983c
+          mv x86_64-linux-android-4.9 ~/x86_64-linux-android-4.9
           ls ~/
           cp scripts/build9.sh kernel_source/
           cd kernel_source
